# agent-ops-dashboard

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  alembic.ini  docker-compose.yml  index.html  mkdocs.yml  prometheus.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  eval.yml
agents/codebase_search/: Dockerfile  pyproject.toml
agents/critic/: Dockerfile  pyproject.toml
agents/investigator/: Dockerfile  pyproject.toml
agents/web_search/: Dockerfile  pyproject.toml
agents/writer/: Dockerfile  pyproject.toml
agents/writer/src/writer/: app.py  chain.py  models.py
alembic/: env.py
alembic/versions/: 15af8b7bcc63_initial_schema.py
docs/: index.md  initial.md  mkdocs.yml
docs/plans/: roadmap-v1.md  roadmap-v2.md
docs/prd/: PRD-001-1-goals-and-dod.md  PRD-001-master-overview.md  PRD-002-1-design-system.md  PRD-002-2-pages-and-wireframes.md  PRD-002-3-interactions-and-a11y.md  PRD-002-frontend-ux.md  PRD-003-1-event-pipeline.md  PRD-003-2-supervisor-spec.md  PRD-003-langgraph-orchestration.md  PRD-004-1-agent-chains.md  PRD-004-2-codebase-index.md  PRD-004-agent-layer.md  PRD-005-1-langsmith-api-spec.md  PRD-005-langsmith-observability.md  PRD-006-data-validation.md  PRD-007-developer-tooling.md  PRD-008-1-auth-impl-spec.md  PRD-008-authentication.md  PRD-009-documentation-standards.md  PRD-010-evaluation-framework.md  PRD-011-metrics-collection.md  PRD-012-backend-di.md  PRD-013-testing-strategy.md
docs/stylesheets/: extra.css
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: AgentCard.test.tsx  ExecutionTimeline.test.tsx  JobCard.test.ts  Modal.test.tsx  StatusBadge.test.tsx  authStore.test.ts  graphqlClient.test.ts  jobStore.test.ts
frontend/src/api/: client.ts  endpoints.ts  graphqlClient.ts
frontend/src/components/: JobCard.tsx  (+6 more)
langflow/flows/: codebase_search.json  critic.json  investigator.json  web_search.json  writer.json
plans/roadmap-v1/: index.html
plans/roadmap-v2/: index.html
prd/PRD-001-1-goals-and-dod/: index.html
prd/PRD-001-master-overview/: index.html
prd/PRD-002-1-design-system/: index.html
prd/PRD-002-2-pages-and-wireframes/: index.html
prd/PRD-002-3-interactions-and-a11y/: index.html
prd/PRD-002-frontend-ux/: index.html
prd/PRD-003-1-event-pipeline/: index.html
prd/PRD-003-2-supervisor-spec/: index.html
prd/PRD-003-langgraph-orchestration/: index.html
prd/PRD-004-1-agent-chains/: index.html
prd/PRD-004-2-codebase-index/: index.html
prd/PRD-004-agent-layer/: index.html
prd/PRD-005-1-langsmith-api-spec/: index.html
prd/PRD-005-langsmith-observability/: index.html
prd/PRD-006-data-validation/: index.html
prd/PRD-007-developer-tooling/: index.html
prd/PRD-008-1-auth-impl-spec/: index.html
prd/PRD-008-authentication/: index.html
prd/PRD-009-documentation-standards/: index.html
prd/PRD-010-evaluation-framework/: index.html
prd/PRD-011-metrics-collection/: index.html
prd/PRD-012-backend-di/: index.html
prd/PRD-013-testing-strategy/: index.html
schemas/: schema.graphql
scripts/: run_evals.py  seed_dataset.py
search/: search_index.json
src/agentops/: codegen.py  config.py  langsmith_handler.py  lifespan.py  worker.py  worker_middleware.py
stylesheets/: extra.css
tests/: conftest.py
tests/e2e/: conftest.py
tests/unit/: test_agent_models.py  test_auth_router.py  test_auth_service.py  test_collection_name.py  test_db_models.py  test_event_transformer.py  test_github_client.py  test_github_webhook.py  test_graph_state.py  test_human_input_node.py  test_index_builder.py  test_internal_router.py  test_investigator_chain.py  test_job_control.py  test_jobs_api.py  test_rate_limiting.py  test_sse_endpoint.py  test_supervisor.py  test_supervisor_full.py  test_supervisor_routing.py  test_timeout.py  test_worker_streaming.py
(+73 files in other folders)
