[project]
name = "agentops"
version = "0.1.0"
description = "AgentOps Dashboard"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "redis[asyncio]>=5.0",
    "httpx>=0.27.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0",
    "langsmith>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.2.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-prometheus>=0.46b0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "fakeredis>=2.23",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentops"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [
    "src",
    "agents/codebase_search/src",
    "agents/web_search/src",
    "agents/critic/src",
    "agents/writer/src",
    "agents/investigator/src",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "ANN", "UP"]
ignore = ["ANN401", "ANN101", "ANN102", "ANN204"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "fakeredis>=2.23",
    "ruff>=0.4.0",
    "httpx>=0.27.0",
]
