[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "writer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langserve[all]>=0.3,<0.4",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/writer"]
